# Rectangle-Properties

./: .gitignore.txt  c_cpp_properties.json  tasks.json
cpp-folder/: CMakeLists.txt
cpp-folder/src/: main.cpp
cpp-template/: CMakeLists.txt
population-project/: main.cpp  settings (1).json
rectangle-properties copy/: CMakeLists.txt
rectangle-properties/src/: main 2.cpp  main.cpp
safest-driving-area/: CMakeLists.txt
safest-driving-area/src/: main.cpp
template folder/: CMakeLists.txt  main.cpp
template folder copy/: main.cpp
